--- a/APIService/src/main/resources/application.yaml
+++ b/APIService/src/main/resources/application.yaml
@@ -14,10 +14,10 @@ spring:
     username: root
     password: 1234
 
-  data:
-    redis:
-      host: redis-container
-      port: 6379
+#  data:
+#    redis:
+#      host: redis-container
+#      port: 6379
 
   jpa:
     database-platform: org.hibernate.dialect.MariaDB106Dialect
